--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.1.2
   custom_button_builder: ^0.0.4
   google_fonts: ^6.2.0
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
